# prepAI

./: .gitignore  README.md  STAGE5_README.md  app.py  backend_entry.py  build_tauri.sh  package.json  prepai-backend.spec  requirements.txt
.github/workflows/: build.yml
core/: agent.py  ai_router.py  hackerrank.py  judge.py  leetcode.py  memory.py  notifications.py  resume.py  vault.py
scripts/: gen_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui-dist/: loading.html
ui/templates/: index.html
